<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/fab_contentDesc"
        android:focusable="true"
        android:src="@drawable/ic_baseline_add_24"
        app:backgroundTint="@color/fabBgColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/fabIconTint" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingStart="12dp"
        android:paddingBottom="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar"
        tools:ignore="RtlSymmetry" />

    <RelativeLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_profile"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="12dp"
            android:layout_centerVertical="true"
            android:elevation="12dp"
            android:src="@drawable/male_user"
            android:contentDescription="@string/app_name" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="12dp"
            android:text="@string/notes"
            android:layout_toEndOf="@+id/iv_profile"
            android:layout_toStartOf="@+id/imageButtonSearch"
            android:textColor="@color/text_color"
            android:textSize="24sp" />

        <ImageButton
            android:id="@+id/imageButtonSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="24dp"
            android:background="@color/transparent"
            android:padding="8dp"
            android:src="@drawable/ic_search_24"
            android:tint="@color/text_color"
            />

        <ImageButton
            android:id="@+id/imageButtonNightMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:layout_toStartOf="@+id/imageButtonSearch"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"
            android:background="@color/transparent"
            android:padding="8dp"
            android:src="@drawable/ic_dark_mode"
            android:tint="@color/text_color"

            />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeSearchLayout"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:background="@color/bg_color"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/imageButtonSearchBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="12dp"
            android:contentDescription="@string/app_name"
            android:background="@color/transparent"
            android:padding="4dp"
            android:src="@drawable/ic_baseline_arrow_back_ios_24"
            android:tint="@color/text_color" />

        <ImageButton
            android:id="@+id/imageButtonSearchCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/app_name"
            android:layout_marginEnd="12dp"
            android:background="@color/transparent"
            android:padding="4dp"
            android:src="@drawable/ic_close_24"
            android:tint="@color/text_color" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_search"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_toStartOf="@+id/imageButtonSearchCancel"
            android:layout_toEndOf="@+id/imageButtonSearchBack"
            app:hintAnimationEnabled="false"
            app:placeholderText="Search"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textCursorDrawable="@drawable/cursor_color"
                android:background="@drawable/edit_text_border"
                android:drawableStart="@drawable/ic_search_24"
                android:drawablePadding="2dp" />

        </com.google.android.material.textfield.TextInputLayout>

    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardLayoutBottom"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/cardColor"
        android:clickable="true"
        android:focusable="true"
        android:translationZ="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RelativeLayout
            android:id="@+id/relativeLayoutBottom"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:visibility="visible">

            <ImageButton
                android:id="@+id/imageButtonDelete"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/app_name"
                android:background="@color/transparent"
                android:src="@drawable/ic_delete_24"
                android:tint="@color/text_color" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardLayoutTop"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/cardColor"
        android:translationZ="2dp"
        android:visibility="gone"
        tools:visibility="gone"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/relativeLayoutTop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            >

            <ImageButton
                android:id="@+id/imageButtonCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="12dp"
                android:padding="12dp"
                android:background="@color/transparent"
                android:src="@drawable/ic_close_24"
                app:tint="@color/text_color"

                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_items_selected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/_0_items_selected"
                android:textColor="@color/text_color"
                android:textSize="18sp"

                />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>